@@ -1,2 +1,19 @@
 ﻿
-
+<!--
+//------------------------------------------------------------------------------
+// <auto-generated>
+//     This code was generated from a template.
+//
+//     Manual changes to this file may cause unexpected behavior in your application.
+//     Manual changes to this file will be overwritten if the code is regenerated.
+// </auto-generated>
+//------------------------------------------------------------------------------
+-->
+<h2>List</h2>
+<p>
+    <a href="#/Organization/new">Create New</a>
+</p>
+<table class="table">
+    <tr>
+    <th>
+        
